Add protection by password

--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ DATABASE_URL=mongodb+srv://manguradima:CrLL9WImhMdmVeLn@cluster0.ldkry.mongodb.n
 CLOUDINARY_CLOUD_NAME=dvicfzbxc
 CLOUDINARY_API_KEY=668242767938443
 CLOUDINARY_API_SECRET=ggNW5QJb_9BK_Q2Ejd_4cjiq0L4
+NEXT_PUBLIC_DOMAIN=http://localhost:3000
+NEXT_PUBLIC_API_DOMAIN=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=faSAnSNADN912bDSAKHBdsadamsodjAS98hb
+ACCESS_PASSWORD=aaaBBBccc
