--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.7.2",
+    "@auth/mongodb-adapter": "^3.7.4",
     "@nextui-org/react": "2.2.9",
     "@prisma/client": "^5.22.0",
     "cloudinary": "^2.5.1",
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
