--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
+    "@heathmont/moon-core-tw": "^10.18.0",
     "@nextui-org/react": "2.2.9",
     "@prisma/client": "^5.22.0",
     "cloudinary": "^2.5.1",
